Add more test cases and fix formatting